--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ prompt-toolkit==1.0.15
 psycopg2==2.7.3.2
 ptyprocess==0.5.2
 Pygments==2.2.0
+gunicorn==19.9.0
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.15
